<resources>
    <string name="app_name">Workout Plans</string>
    <string name="button_addPlan">Add Workout Plan</string>
    <string name="hint_trainerTitle">Plan Title</string>
    <string name="menu_addPlan">Add Plan</string>
    <string name="menu_addRoutine">Add Routine</string>
    <string name="menu_cancelPlan">Cancel</string>
    <string name="menu_deletePlan">Delete</string>
    <string name="menu_cancelRoutine">Cancel Routine</string>
    <string name="button_addRoutine">Add Workout Routine</string>
    <string name="hint_routineTitle">Routine Title</string>
    <string name="hint_routineSet1">Routine Set</string>
    <string name="enter_plan_title"> Please enter a Workout Plan Title </string>
    <string name="save_plan"> Save Plan </string>
    <string name="enter_routine_title"> Please enter a Weight </string>
    <string name="save_routine"> Save Routine </string>
    <string name="button_seeRoutine"> See Routine </string>
    <string name="button_deletePlan"> Remove </string>
    <string name="action_search"> Search </string>
    <string name="search_hint">Type name…</string>
    <string name="fittness_trainer">Fitness Trainer</string>
    <string name="enter_user_name"> Please enter your User Name </string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="login_error"> Login Failed....you suck </string>
    <string name="password">Password</string>
    <string name="save_weights"> Save Weight </string>

    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your UserName</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="calculate">Calculate</string>
    <string name="height">Height</string>
    <string name="add_weight_reading">Add Weight Reading</string>
    <string name="enter_day_of_tracking">Enter Day of Tracking</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="auth_failed">Auth Fail</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_weight_kgs">Enter Weight (Kgs)</string>
    <string name="view_progress">View Progress</string>
    <string name="menu_deleteWeight">Delete Weight</string>

</resources>