<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </PreferenceScreen>

    <PreferenceCategory
        app:icon="@drawable/ic_message"
        app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_settings"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_notifications"
        app:title="Notifications">

        <SeekBarPreference
            app:key="volume_notifications"
            app:title="Volume"
            app:showSeekBarValue="true"
            app:defaultValue= "60" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Disable notifications"
            app:summaryOn="You will no longer receive any notifications"
            app:summaryOff="You will receive all notifications"/>
    </PreferenceCategory>


</PreferenceScreen>