<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/search_hint"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addPlan"
        app:showAsAction="always" />

</menu>